--- a/src/location.html
+++ b/src/location.html
@@ -729,10 +729,11 @@
                     </div>
                     <!-- desktop -->
                     <div class="md:block hidden">
-                        <div class="w-full h-max grid md:grid-cols-2 grid-cols-1 gap-y-[16.5px] gap-x-[34px]">
-                            <figure class="order-1 md:order-2 w-full h-full">
+                        <div
+                            class="w-full h-max grid md:grid-cols-2 grid-cols-1 gap-y-[16.5px] gap-x-[34px] overflow-hidden">
+                            <figure class="order-1 md:order-2 w-full h-[452.74px] dynamicimageonclickchange">
                                 <img src="./mediaFiles/Location/OverBridge.webp" alt="overBridge"
-                                    class=" object-center w-full h-full">
+                                    class="object-cover object-center w-full h-full">
                             </figure>
                             <div class=" order-2 md:order-1 w-full h-max flex flex-col gap-[12px]">
                                 <div
@@ -751,7 +752,7 @@
                                         <div
                                             class="w-[18.81px] h-[18.81px] sm:w-[31.3px] sm:h-[31.3px] rounded-full bg-[#F5F5F5] flex items-center justify-center cursor-pointer">
                                             <i
-                                                class="fa-solid fa-angle-down text-[#003253] conTructionMileStoneBtn"></i>
+                                                class="onclickchange-image fa-solid fa-angle-down text-[#003253] conTructionMileStoneBtn"></i>
                                         </div>
                                     </div>
                                     <div class="w-full hidden ConsTructionProgressList">
@@ -778,7 +779,7 @@
                                         <div
                                             class="w-[18.81px] h-[18.81px] sm:w-[31.3px] sm:h-[31.3px] rounded-full bg-[#F5F5F5] flex items-center justify-center cursor-pointer">
                                             <i
-                                                class="fa-solid fa-angle-down text-[#003253] conTructionMileStoneBtn"></i>
+                                                class="onclickchange-image fa-solid fa-angle-down text-[#003253] conTructionMileStoneBtn"></i>
                                         </div>
                                     </div>
                                     <div class="w-full hidden ConsTructionProgressList">
@@ -805,7 +806,7 @@
                                         <div
                                             class="w-[18.81px] h-[18.81px] sm:w-[31.3px] sm:h-[31.3px] rounded-full bg-[#F5F5F5] flex items-center justify-center cursor-pointer">
                                             <i
-                                                class="fa-solid fa-angle-down text-[#003253] conTructionMileStoneBtn"></i>
+                                                class="onclickchange-image fa-solid fa-angle-down text-[#003253] conTructionMileStoneBtn"></i>
                                         </div>
                                     </div>
                                     <div class="w-full hidden ConsTructionProgressList">
@@ -832,7 +833,7 @@
                                         <div
                                             class="w-[18.81px] h-[18.81px] sm:w-[31.3px] sm:h-[31.3px] rounded-full bg-[#F5F5F5] flex items-center justify-center cursor-pointer">
                                             <i
-                                                class="fa-solid fa-angle-down text-[#003253] conTructionMileStoneBtn"></i>
+                                                class="onclickchange-image fa-solid fa-angle-down text-[#003253] conTructionMileStoneBtn"></i>
                                         </div>
                                     </div>
                                     <div class="w-full hidden ConsTructionProgressList">
@@ -853,7 +854,7 @@
                                 <div class="swiper-slide flex justify-center">
                                     <div class="flex flex-col">
                                         <img src="./mediaFiles/Location/highway_circle.webp" alt="highway_circle"
-                                            class=" w-full h-auto object-center object-contain">
+                                            class=" w-full h-[287.06px] object-center object-cover">
                                         <div
                                             class=" w-full flex flex-col gap-[17.58px] items-center justify-between bg-[#FFFFFF] py-[8.5px] px-[8px]">
                                             <div class="w-full flex items-center justify-start gap-[11.65px]">
@@ -880,8 +881,8 @@
                                 </div>
                                 <div class="swiper-slide flex justify-center">
                                     <div class="flex flex-col">
-                                        <img src="./mediaFiles/Location/highway_circle.webp" alt="highway_circle"
-                                            class=" w-full h-auto object-center object-contain">
+                                        <img src="./mediaFiles/Location/OverBridge.webp" alt="overBridge"
+                                            class=" w-full h-[287.06px] object-center object-cover">
                                         <div
                                             class=" w-full flex flex-col gap-[17.58px] items-center justify-between bg-[#FFFFFF] py-[8.5px] px-[8px]">
                                             <div class="w-full flex items-center justify-start gap-[11.65px]">
@@ -908,8 +909,9 @@
                                 </div>
                                 <div class="swiper-slide flex justify-center">
                                     <div class="flex flex-col">
-                                        <img src="./mediaFiles/Location/highway_circle.webp" alt="highway_circle"
-                                            class=" w-full h-auto object-center object-contain">
+                                        <img src="./mediaFiles/Location/highway_infrastructure.webp"
+                                            alt="highway_infrastructure"
+                                            class=" w-full h-[287.06px] object-center object-cover">
                                         <div
                                             class=" w-full flex flex-col gap-[17.58px] items-center justify-between bg-[#FFFFFF] py-[8.5px] px-[8px]">
                                             <div class="w-full flex items-center justify-start gap-[11.65px]">
@@ -936,8 +938,8 @@
                                 </div>
                                 <div class="swiper-slide flex justify-center">
                                     <div class="flex flex-col">
-                                        <img src="./mediaFiles/Location/highway_circle.webp" alt="highway_circle"
-                                            class=" w-full h-auto object-center object-contain">
+                                        <img src="./mediaFiles/Location/investment1.svg" alt="investment1.svg"
+                                            class=" w-full h-[287.06px] object-center object-cover">
                                         <div
                                             class=" w-full flex flex-col gap-[17.58px] items-center justify-between bg-[#FFFFFF] py-[8.5px] px-[8px]">
                                             <div class="w-full flex items-center justify-start gap-[11.65px]">
@@ -1227,7 +1229,7 @@
                             <div class="swiper-slide group">
                                 <div class="w-full flex flex-col gap-[16px] items-start">
                                     <div class="relative w-full h-full">
-                                        <img src="./mediaFiles/Location/plane.webp" alt="plane"
+                                        <img src="./mediaFiles/Location/issr-mohali.svg" alt="issr-mohali"
                                             class=" h-[329.5338px] md:h-[295.0747px] object-center object-fill">
 
                                         <!-- effect on hover desktop -->
@@ -1444,7 +1446,7 @@
                     <!-- Right Buttons -->
                     <div class="flex gap-[10.14px] sm:gap-4 justify-center items-center">
                         <button id="LocationMap" type="button"
-                            class="sm:w-max  h-[29.77] hover:bg-[var(--main-blue)] hover:text-white transition-all duration-300 sm:h-[36px] px-[19.85px] sm:px-[24px] border border-[#173F63] cursor-pointer text-[#003253] leading-[150%] font-jost text-[13.23px] sm:text-[16px] mapbtn">
+                            class="sm:w-max  h-[29.77] bg-[var(--main-blue)] text-white transition-all duration-300 sm:h-[36px] px-[19.85px] sm:px-[24px] border border-[#173F63] cursor-pointer leading-[150%] font-jost text-[13.23px] sm:text-[16px] mapbtn">
                             Location Map
                         </button>
                         <button id="googleMap" type="button"
@@ -1456,13 +1458,22 @@
                 <div class="w-full max-h-[498.2861px] bg-center bg-cover"
                     style="background-image: var(--background-decorative-map);">
 
-                    <!-- Location map (desktop only) -->
-                    <img src="./mediaFiles/Location/Location_map.webp" alt="location"
-                        class="hidden md:block w-full h-full object-contain px-[20.40px] py-[16.39px]" />
+                    <!-- Location map images -->
+                    <div id="locationImages">
+                        <!-- Desktop -->
+                        <img src="./mediaFiles/Location/Location_map.webp" alt="location"
+                            class="hidden md:block w-full h-full object-contain px-[20.40px] py-[16.39px]" />
+                        <!-- Mobile -->
+                        <img src="./mediaFiles/Location/Location_map_Mobile.webp" alt="location"
+                            class="block md:hidden w-full h-full object-contain px-[20.40px] py-[16.39px]" />
+                    </div>
 
-                    <!-- Location map (mobile) -->
-                    <img src="./mediaFiles/Location/Location_map_Mobile.webp" alt="location"
-                        class="block md:hidden w-full h-full object-contain px-[20.40px] py-[16.39px]" />
+                    <!-- Google Map -->
+                    <iframe id="googleMapFrame"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.086757024852!2d-122.41941568468102!3d37.774929779759616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808d6c0e0f5f%3A0xe4f4b8c9a2b8a47b!2sSan%20Francisco%20CA!5e0!3m2!1sen!2sus!4v1695734536645!5m2!1sen!2sus"
+                        width="100%" height="498.2861px" style="border:0; display:none;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
 
             </div>
@@ -1496,7 +1507,8 @@
                         Frequently asked questions</h2>
                     <p
                         class="font-jost font-normal md:font-medium text-[16px] md:text-[20px] leading-[160%] md:leading-[28px] text-[#474A49]">
-                        Clear answers to help you make informed decisions about the location and connectivity of The Pinnacle.  
+                        Clear answers to help you make informed decisions about the location and connectivity of The
+                        Pinnacle.
                     </p>
                 </div>
                 <div class="relative flex flex-col gap-[23px] w-full h-auto pr-2.5">
@@ -1522,8 +1534,9 @@
                         <div class="flex w-full items-center justify-between">
                             <h3
                                 class="font-jost font-medium text-[17px] md:text-[20px] leading-[100%] text-[var(--main-blue)]">
-                                The Pinnacle is strategically located in Sector 83 Alpha, IT City, Mohali — near the International Airport and easily accessible via NH-152
-& Airport Road. </h3>
+                                The Pinnacle is strategically located in Sector 83 Alpha, IT City, Mohali — near the
+                                International Airport and easily accessible via NH-152
+                                & Airport Road. </h3>
                             <div
                                 class="shrink-0 w-[25px] h-[25px] md:w-[28.01px] md:h-[28.01px] rounded-full bg-[var(--main-blue)] md:bg-[#F6F6F6] flex items-center justify-center cursor-pointer FAQButton">
                                 <i class="fa-solid fa-plus text-white md:text-[#173F63] text-[12px] "></i>
@@ -1531,8 +1544,9 @@
                         </div>
                         <p
                             class="text-[#2C2C2C] font-jost text-[16px] md:text-[18px] leading-[100%] hidden MakeVisibleOnclick">
-                            The Pinnacle Mohali is just a 2-minute drive from Chandigarh Airport, ensuring unmatched travel convenience for professionals 
-and NRI  families.
+                            The Pinnacle Mohali is just a 2-minute drive from Chandigarh Airport, ensuring unmatched
+                            travel convenience for professionals
+                            and NRI families.
                         </p>
                     </div>
                     <div
@@ -1548,8 +1562,9 @@ and NRI  families.
                         </div>
                         <p
                             class="text-[#2C2C2C] font-jost text-[16px] md:text-[18px] leading-[100%] hidden MakeVisibleOnclick">
-                            Nearby institutions include Infosys, Amity University, Plaksha University, IISER, and HDFC Regional Office — making it ideal for 
-working professionals and families.
+                            Nearby institutions include Infosys, Amity University, Plaksha University, IISER, and HDFC
+                            Regional Office — making it ideal for
+                            working professionals and families.
                         </p>
                     </div>
                     <div
@@ -1565,7 +1580,8 @@ working professionals and families.
                         </div>
                         <p
                             class="text-[#2C2C2C] font-jost text-[16px] md:text-[18px] leading-[100%] hidden MakeVisibleOnclick">
-                            The location offers quick access to top hospitals like Fortis and  Ivy, along with shopping centers and commercial hubs like MCC.
+                            The location offers quick access to top hospitals like Fortis and Ivy, along with shopping
+                            centers and commercial hubs like MCC.
                         </p>
                     </div>
                     <div
@@ -1581,7 +1597,8 @@ working professionals and families.
                         </div>
                         <p
                             class="text-[#2C2C2C] font-jost text-[16px] md:text-[18px] leading-[100%] hidden MakeVisibleOnclick">
-                            Sector 83 Alpha is an emerging luxury and commercial zone, part of  Mohali’s IT City — offering excellent infrastructure, connectivity, and long-term value appreciation.
+                            Sector 83 Alpha is an emerging luxury and commercial zone, part of Mohali’s IT City —
+                            offering excellent infrastructure, connectivity, and long-term value appreciation.
                         </p>
                     </div>
                 </div>
@@ -2109,6 +2126,6 @@ working professionals and families.
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 
 <!-- Custom JS -->
-<script src="./script/main.js" defer></script>
+<script src="./script/main.js"></script>
 
 </html>
