--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pinnacle apartment</title>
+    <title>The Pinnacle Mohali by STJ Group – 3/4/5 BHK Luxury Apartments</title>
+
+    <meta name="description"
+        content="Explore 3, 4 & 5 BHK luxury apartments at The Pinnacle Mohali by STJ Group. Premium homes in IT City, Mohali. Booking Open. Call Realty Nivesh Today!">
+
+    <meta name="keywords" content="pinnacle-apartment, apartment">
+    <meta name="author" content="Virendra Sah">
+
     <link rel="stylesheet" href="./output.css" />
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -1278,12 +1285,19 @@
                                 <!-- content -->
                                 <div class="relative grow lg:flex-[1.3]  w-full h-auto z-10 bg-no-repeat bg-center bg-cover sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]"
                                     style="background-image: var(--paper-crashes-BG);">
-                                    <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
+                                    <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[30px]">
                                         <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                             Crafted for those who live above the ordinary</h3>
-                                        <div class="w-full flex flex-col items-start justify-start">
-                                            <button type="button" class="flex items-center justify-center gap-[6px] font-jost font-semibold text-white border rounded-[4px]">
+                                        <div class="w-full flex flex-col items-start justify-start"
+                                            style="row-gap:20px">
+                                            <button type="button"
+                                                class="w-[153px] w-full py-[16px] cursor-pointer hover:bg-[#003253] hover:text-white bg-white flex items-center justify-center gap-[6px] font-jost font-semibold text-[#003253] border border-[#003253] rounded-[4px]">
                                                 Schedule Private Visit
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                            </button>
+                                            <button type="button"
+                                                class="w-[153px] w-full py-[16px] cursor-pointer hover:bg-[#003253] hover:text-white bg-white flex items-center justify-center gap-[6px] font-jost font-semibold text-[#003253] border border-[#003253] rounded-[4px]">
+                                                Download Brochure
                                                 <i class="fa-solid fa-arrow-right"></i>
                                             </button>
                                         </div>
