--- a/src/location.html
+++ b/src/location.html
@@ -1643,8 +1643,8 @@
                             <input type="text" placeholder="Your Name"
                                 class="outline-none border-b border-[#BABABA] w-full placeholder-[#101010] font-normal text-[#101010] text-[16px] md:text-[17px]">
                             <div class="flex flex-col items-start justify-start w-full gap-[9.56px] relative">
-                                <input id="mobile_code" type="tel" placeholder="Your Phone number* "
-                                    class="w-full px-3 placeholder-[#101010] py-2 text-[#101010] text-[16px] md:text-[17px]  focus:outline-none border-b border-[#BABABA]" />
+                                <input type="tel" placeholder="Your Phone number* "
+                                    class="mobile_code w-full px-3 placeholder-[#101010] py-2 text-[#101010] text-[16px] md:text-[17px]  focus:outline-none border-b border-[#BABABA]" />
                                 <span class="text-[#424141] leading-[100%] text-[12.6px] font-jost">You’ll receive OTP
                                     via WhatsApp and SMS </span>
                             </div>
