--- a/src/specification.html
+++ b/src/specification.html
@@ -753,18 +753,18 @@
                         <!-- Scrollable List -->
                         <ul
                             class="w-full h-auto flex-1 flex flex-col gap-[20px] overflow-y-auto custom-scrollbar-specification pr-2">
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Electrical fittings</li>
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Wall Finishes</li>
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Floor-to-Floor Height
-                            </li>
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Joinery Doors & Frames
-                            </li>
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Windows & Glazing</li>
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Flooring & Cladding</li>
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Plumbing & Sanitary</li>
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Connectivity &
-                                Technology</li>
-                            <li class="font-jost font-medium text-[24px] text-white capitalize">Safety & Security</li>
+                            <li><a href="#Electricalfittings" class="font-jost font-medium text-[24px] text-white capitalize">Electrical fittings</a></li>
+                            <li><a href="#WallFinishes" class="font-jost font-medium text-[24px] text-white capitalize">Wall Finishes</a></li>
+                            <li><a href="#Floor-to-FloorHeight" class="font-jost font-medium text-[24px] text-white capitalize">Floor-to-Floor Height
+                            </a></li>
+                            <li><a href="#JoineryDoorsFrames" class="font-jost font-medium text-[24px] text-white capitalize">Joinery Doors & Frames
+                            </a></li>
+                            <li><a href="#WindowsGlazing" class="font-jost font-medium text-[24px] text-white capitalize">Windows & Glazing</a></li>
+                            <li><a href="#FlooringCladding" class="font-jost font-medium text-[24px] text-white capitalize">Flooring & Cladding</a></li>
+                            <li><a href="#PlumbingSanitary" class="font-jost font-medium text-[24px] text-white capitalize">Plumbing & Sanitary</a></li>
+                            <li><a href="#ConnectivityTechnology" class="font-jost font-medium text-[24px] text-white capitalize">Connectivity &
+                                Technology</a></li>
+                           <li> <a href="#SafetySecurity" class="font-jost font-medium text-[24px] text-white capitalize">Safety & Security</a></li>
                         </ul>
 
                         <!-- Download Button -->
@@ -784,7 +784,7 @@
                     <div class="flex-1 h-[inerit] overflow-y-auto scrollbar-none cursor-pointer">
                         <!-- Right side content -->
                         <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
-                            <div
+                            <div id="Electricalfittings"
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
                                     class="font-jost text-[25px] lg:text-[64px] text-[#003253] capitalize lg:leading-[73px]">
@@ -809,7 +809,7 @@
                             </div>
                         </div>
                         <!-- 2 -->
-                        <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
+                        <div id="WallFinishes" class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
                             <div
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
@@ -833,7 +833,7 @@
                             </div>
                         </div>
                         <!-- 3 -->
-                        <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
+                        <div id="Floor-to-FloorHeight" class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
                             <div
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
@@ -858,7 +858,7 @@
                         </div>
 
                         <!-- 4 -->
-                        <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
+                        <div id="JoineryDoorsFrames" class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
                             <div
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
@@ -886,7 +886,7 @@
                         </div>
 
                         <!-- 5 -->
-                        <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
+                        <div id="WindowsGlazing" class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
                             <div
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
@@ -911,7 +911,7 @@
                         </div>
 
                         <!-- 6 -->
-                        <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
+                        <div id="FlooringCladding" class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
                             <div
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
@@ -940,7 +940,7 @@
                         </div>
 
                         <!-- 7 -->
-                        <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
+                        <div id="PlumbingSanitary" class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
                             <div
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
@@ -967,7 +967,7 @@
                         </div>
 
                         <!-- 8 -->
-                        <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
+                        <div id="ConnectivityTechnology" class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
                             <div
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
@@ -995,7 +995,7 @@
                         </div>
 
                         <!-- 9 -->
-                        <div class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
+                        <div id="SafetySecurity" class="w-full lg:h-lvh grid grid-cols-1 lg:grid-cols-2 gap-x-[70px] mb-[70px]">
                             <div
                                 class="flex px-[16.5px] lg:px-0 flex-col items-start justify-start gap-[16px] lg:gap-[30px] mt-[15px] lg:mt-0 order-2 lg:order-1">
                                 <h3
