--- a/src/index.html
+++ b/src/index.html
@@ -341,7 +341,7 @@
                                                 class="w-[142.25px] h-[31.08px] bg-[#21945A] border border-white rounded-[4px] flex items-center gap-2 justify-center cursor-pointer">
                                                 <figure class="w-[17.43px] h-[17.51px]">
                                                     <img src="./mediaFiles/Home page/Counter number/Start your homebuying Journey/Vector.webp"
-                                                        alt="">
+                                                        alt="whatsaap-icon">
                                                 </figure>
                                                 <span class="font-jost font-medium text-[13.17px] leading-[100%]">Whats
                                                     app
