change in index

--- a/src/index.html
+++ b/src/index.html
@@ -1926,7 +1926,7 @@
                                                         Site Preparation & Clearing</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center md:justify-start justify-end">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/green_check.png"
                                                         alt="Green_check_icon"
                                                         class="w-[8.25px] h-[6px] sm:w-[10.77px] sm:h-[7.83px]">
@@ -1948,7 +1948,7 @@
                                                         2-Level Basement Excavation & Retaining Wall</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/green_check.png"
                                                         alt="Green_check_icon"
                                                         class="w-[8.25px] h-[6px] sm:w-[10.77px] sm:h-[7.83px]">
@@ -1970,7 +1970,7 @@
                                                         Basement Slabs (B1 + B2)</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/green_check.png"
                                                         alt="Green_check_icon"
                                                         class="w-[8.25px] h-[6px] sm:w-[10.77px] sm:h-[7.83px]">
@@ -2011,7 +2011,7 @@
                                                         Ground Floor Slab</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center md:justify-start justify-end">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/green_check.png"
                                                         alt="Green_check_icon"
                                                         class="w-[8.25px] h-[6px] sm:w-[10.77px] sm:h-[7.83px]">
@@ -2033,7 +2033,7 @@
                                                         Floors 1 to 10 </p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/time.webp"
                                                         alt="time_icon"
                                                         class="w-[10.06px] h-[10.83px] sm:w-[11.13px] sm:h-[11.99px]">
@@ -2057,7 +2057,7 @@
                                                         Floors 11 to 20 </p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/time_icon_yellow.png"
                                                         alt="time_icon"
                                                         class="w-[10.06px] h-[10.83px] sm:w-[11.13px] sm:h-[11.99px]">
@@ -2080,7 +2080,7 @@
                                                         Floors 21 to 36</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/time_icon_yellow.png"
                                                         alt="time_icon"
                                                         class="w-[10.06px] h-[10.83px] sm:w-[11.13px] sm:h-[11.99px]">
@@ -2121,7 +2121,7 @@
                                                         Clubhouse Foundation (1 Lakh Sq.ft)</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/green_check.png"
                                                         alt="Green_check_icon"
                                                         class="w-[8.25px] h-[6px] sm:w-[10.77px] sm:h-[7.83px]">
@@ -2144,7 +2144,7 @@
                                                         Landscape Podium + Theme Gardens</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/time_icon_yellow.png"
                                                         alt="time_icon"
                                                         class="w-[10.06px] h-[10.83px] sm:w-[11.13px] sm:h-[11.99px]">
@@ -2167,7 +2167,7 @@
                                                         Water Bodies + Skywalk Installation</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/timestamp-pink.svg"
                                                         alt="time_icon"
                                                         class="w-[10.06px] h-[10.83px] sm:w-[11.13px] sm:h-[11.99px]">
@@ -2209,7 +2209,7 @@
                                                         External Plaster & Elevation Work </p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/time_icon_yellow.png"
                                                         alt="time_icon"
                                                         class="w-[10.06px] h-[10.83px] sm:w-[11.13px] sm:h-[11.99px]">
@@ -2232,7 +2232,7 @@
                                                         Interior Fit-outs & Lobby Finishing</p>
                                                 </div>
                                                 <div
-                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end sm:justify-start">
+                                                    class="w-[134.72px] h-max flex gap-[7.33px] items-center justify-end md:justify-start">
                                                     <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/time_icon_yellow.png"
                                                         alt="time_icon"
                                                         class="w-[10.06px] h-[10.83px] sm:w-[11.13px] sm:h-[11.99px]">
