--- a/src/index.html
+++ b/src/index.html
@@ -1890,10 +1890,10 @@
                             </div>
                         </div>
                         <div class="w-full h-max flex flex-col gap-y-[16.5px]  md:flex-row">
-                            <figure>
+                            <figure class="w-full">
                                 <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/Building_tower.webp"
                                     alt="Building-tower"
-                                    class="w-[356.8px] sm:w-full md:w-[447.87px] h-[216.17px] sm:h-full object-fill object-center">
+                                    class="w-full md:w-[447.87px] h-max sm:h-full object-cover object-center">
                             </figure>
                             <div class="w-full h-max px-[15.26px]">
                                 <div
