home page changes

--- a/src/index.html
+++ b/src/index.html
@@ -1906,7 +1906,7 @@
                             </div>
                         </div>
                         <div class="w-full h-max flex flex-col gap-y-[16.5px]  md:flex-row">
-                            <figure class="w-full">
+                            <figure class="w-full sm:w-auto">
                                 <img src="./mediaFiles/Home page/Counter number/Construction Milestones at The Pinnacle Mohali/Building_tower.webp"
                                     alt="Building-tower"
                                     class="w-full md:w-[447.87px] h-max sm:h-full object-cover object-center">
